@@ -1,6 +1,7 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.model import ModelSingleton, ModelSQL, UnionMixin, fields
+from trytond.model import (ModelSingleton, ModelSQL, UnionMixin, fields,
+    sequence_ordered)
 from trytond.transaction import Transaction
 
 __all__ = [
@@ -11,6 +12,7 @@ __all__ = [
     'Model4Union1', 'Model4Union2', 'Model4Union3', 'Model4Union4',
     'Union', 'UnionUnion',
     'Model4UnionTree1', 'Model4UnionTree2', 'UnionTree',
+    'SequenceOrderedModel',
     ]
 
 
@@ -154,3 +156,8 @@ class UnionTree(UnionMixin, ModelSQL):
     @staticmethod
     def union_models():
         return ['test.model.union.tree1', 'test.model.union.tree2']
+
+
+class SequenceOrderedModel(sequence_ordered(), ModelSQL):
+    'Sequence Ordered Model'
+    __name__ = 'test.order.sequence'
